# app-opencats

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml  setup.sh
.cursor/rules/: app-development.mdc
.github/: copilot-instructions.md
src/: cli.py
src/apps/akaunting/: akaunting_cli.py
src/apps/akaunting/config/: settings.py
src/apps/akaunting/core/: accounts.py  bills.py  categories.py  contacts.py  currencies.py  invoices.py  items.py  reconciliations.py  setup.py  taxes.py  (+1 more)
src/apps/chatwoot/: README.md  chatwoot_cli.py
src/apps/frappecrm/: frappecrm_cli.py
src/apps/frappehelpdesk/: README.md  frappehelpdesk_cli.py
src/apps/frappehrms/: frappehrms_cli.py
src/apps/gitlab/: README.md  gitlab_cli.py
src/apps/gumroad/: README.md  gumroad_cli.py
src/apps/mattermost/: README.md  mattermost_cli.py
src/apps/medusa/: README.md  medusa_cli.py
src/apps/odoohr/: README.md  odoohr_cli.py
src/apps/odooinventory/: README.md  odooinventory_cli.py
src/apps/odooproject/: README.md  odooproject_cli.py
src/apps/odoosales/: README.md  odoosales_cli.py
src/apps/onlyofficedocs/: onlyofficedocs_cli.py
src/apps/opencats/: OpenCATS.md  README.md  data-plan.md  opencats_cli.py
src/apps/owncloud/: README.md  owncloud_cli.py
src/apps/spree/: README.md  spree_cli.py
src/apps/supabase/: README.md  supabase_cli.py
src/apps/superset/: README.md  superset_cli.py
src/apps/teable/: README.md  teable_cli.py
src/common/: anthropic_client.py  img_to_b64.py  load_json.py  logger.py  openai.py  pexels.py  save_to_json.py  threading.py
(+984 files in other folders)
